--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "packageName",
+  "name": "unjucks",
   "version": "0.0.0",
-  "description": "",
-  "repository": "unjs/packageName",
+  "description": "A Hygen-style CLI generator for creating templates and scaffolding projects",
+  "repository": "unjs/unjucks",
+  "bin": {
+    "unjucks": "./dist/cli.mjs"
+  },
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
   "exports": {
-    ".": "./dist/index.mjs"
+    ".": "./dist/index.mjs",
+    "./cli": "./dist/cli.mjs"
   },
   "types": "./dist/index.d.mts",
   "files": [
@@ -23,8 +27,21 @@
     "test": "pnpm lint && pnpm test:types && vitest run --coverage",
     "test:types": "tsc --noEmit --skipLibCheck"
   },
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "citty": "^0.1.6",
+    "confbox": "^0.2.2",
+    "fs-extra": "^11.2.0",
+    "inquirer": "^9.2.15",
+    "nunjucks": "^3.2.4",
+    "ora": "^8.0.1",
+    "yaml": "^2.4.1"
+  },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.7",
     "@types/node": "^24.3.0",
+    "@types/nunjucks": "^3.2.3",
     "@vitest/coverage-v8": "^3.2.4",
     "automd": "^0.4.0",
     "changelogen": "^0.6.2",
