Migrating to vitest-cucumber

--- a/package.json
+++ b/package.json
@@ -26,18 +26,26 @@
     "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags",
     "test": "pnpm lint && pnpm test:types && vitest run --coverage",
     "test:types": "tsc --noEmit --skipLibCheck",
-    "test:cucumber": "cucumber-js --config cucumber.config.cjs",
-    "test:cucumber:watch": "cucumber-js --config cucumber.config.cjs --watch",
-    "test:smoke": "cucumber-js --profile smoke",
-    "test:regression": "cucumber-js --profile regression",
-    "test:integration": "cucumber-js --profile integration",
-    "test:dev": "cucumber-js --profile dev",
-    "test:ci": "cucumber-js --profile ci",
-    "test:performance": "cucumber-js --profile performance",
-    "test:security": "cucumber-js --profile security",
-    "test:cucumber:dry": "cucumber-js --config cucumber.config.cjs --dry-run",
-    "test:cucumber:parallel": "cucumber-js --profile ci --parallel 4",
-    "test:cucumber:debug": "DEBUG=true cucumber-js --profile dev"
+    "test:bdd": "vitest run tests/features/",
+    "test:bdd:watch": "vitest watch tests/features/",
+    "test:unit": "vitest run --exclude tests/features/",
+    "test:all": "vitest run",
+    "test:smoke": "vitest run tests/features/cli/basic-cli.feature.spec.ts",
+    "test:bdd": "vitest run --config config/vitest.cucumber.config.ts",
+    "test:bdd:watch": "vitest watch --config config/vitest.cucumber.config.ts",
+    "test:bdd:ui": "vitest --config config/vitest.cucumber.config.ts --ui",
+    "test:regression": "vitest run --config config/vitest.cucumber.config.ts --reporter=verbose",
+    "test:integration": "vitest run --config config/vitest.cucumber.config.ts --reporter=json --outputFile=reports/integration-results.json",
+    "test:dev": "vitest watch --config config/vitest.cucumber.config.ts --reporter=verbose",
+    "test:ci": "vitest run --config config/vitest.cucumber.config.ts --coverage --reporter=json --outputFile=reports/ci-results.json",
+    "test:performance": "vitest run tests/performance/ --reporter=verbose --outputFile=reports/perf-results.json",
+    "test:perf:benchmark": "vitest run tests/performance/ --reporter=verbose",
+    "test:security": "vitest run --config config/vitest.cucumber.config.ts --testNamePattern=\".*security.*\"",
+    "test:cucumber:dry": "vitest run --config config/vitest.cucumber.config.ts --reporter=verbose --bail=1",
+    "test:cucumber:parallel": "vitest run --config config/vitest.cucumber.config.ts --pool=threads --poolOptions.threads.maxThreads=4",
+    "test:cucumber:debug": "DEBUG=true vitest run --config config/vitest.cucumber.config.ts --reporter=verbose",
+    "test:cucumber:legacy": "echo 'Legacy cucumber removed. Use npm run test:bdd instead'",
+    "test:cucumber:watch": "echo 'Legacy cucumber removed. Use npm run test:bdd:watch instead'"
   },
   "dependencies": {
     "chalk": "^5.3.0",
@@ -51,13 +59,13 @@
   },
   "devDependencies": {
     "@amiceli/vitest-cucumber": "^5.2.1",
-    "@cucumber/cucumber": "^10.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.0",
     "@types/node": "^24.3.0",
     "@types/nunjucks": "^3.2.3",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "automd": "^0.4.0",
     "changelogen": "^0.6.2",
     "chokidar": "^4.0.3",
@@ -69,7 +77,6 @@
     "obuild": "^0.2.1",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.0",
-    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
