--- a/package.json
+++ b/package.json
@@ -1,149 +1,114 @@
 {
   "name": "unjucks",
-  "version": "0.0.0",
-  "description": "A Hygen-style CLI generator for creating templates and scaffolding projects",
-  "repository": "unjs/unjucks",
-  "bin": {
-    "unjucks": "./dist/cli.mjs",
-    "unjucks-mcp": "./dist/mcp-server.mjs"
-  },
-  "license": "MIT",
-  "sideEffects": false,
   "type": "module",
-  "exports": {
-    ".": "./dist/index.mjs",
-    "./cli": "./dist/cli.mjs",
-    "./mcp": "./dist/mcp/index.mjs"
+  "version": "1.0.0",
+  "packageManager": "pnpm@9.12.1",
+  "description": "The next-generation code generator - intelligent, fast, and AI-integrated scaffolding tool that makes Hygen and Yeoman obsolete",
+  "author": "unjs",
+  "license": "MIT",
+  "funding": "https://github.com/sponsors/unjs",
+  "homepage": "https://github.com/unjs/unjucks#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/unjs/unjucks.git"
   },
-  "types": "./dist/index.d.mts",
+  "bugs": {
+    "url": "https://github.com/unjs/unjucks/issues"
+  },
+  "keywords": [
+    "code-generator",
+    "scaffolding",
+    "templates",
+    "cli",
+    "ai-integration",
+    "mcp",
+    "nunjucks",
+    "hygen-alternative",
+    "yeoman-alternative"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "bin": {
+    "unjucks": "./bin/unjucks.mjs"
+  },
   "files": [
+    "bin",
     "dist"
   ],
   "scripts": {
-    "build": "obuild",
+    "build": "tsc",
     "dev": "vitest dev",
-    "server:dev": "tsx src/server/index.ts",
-    "server:start": "node dist/server/index.js",
-    "lint": "eslint . && prettier -c .",
-    "lint:fix": "automd && eslint . --fix && prettier -w .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "prepack": "pnpm build",
-    "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags",
-    "test": "pnpm lint && pnpm test:types && vitest run --coverage",
-    "test:types": "tsc --noEmit --skipLibCheck",
-    "test:bdd": "vitest run --config config/vitest.cucumber.config.ts",
-    "test:bdd:watch": "vitest watch --config config/vitest.cucumber.config.ts",
+    "release": "changelogen --release && npm publish && git push --follow-tags",
+    "test": "vitest run",
     "test:unit": "vitest run --exclude tests/features/",
-    "test:all": "vitest run",
-    "test:smoke": "vitest run tests/features/cli/basic-cli.feature.spec.ts",
-    "test:bdd:ui": "vitest --config config/vitest.cucumber.config.ts --ui",
-    "test:regression": "vitest run --config config/vitest.cucumber.config.ts --reporter=verbose",
-    "test:integration": "vitest run --config config/vitest.cucumber.config.ts --reporter=json --outputFile=reports/integration-results.json",
-    "test:dev": "vitest watch --config config/vitest.cucumber.config.ts --reporter=verbose",
-    "test:ci": "vitest run --config config/vitest.cucumber.config.ts --coverage --reporter=json --outputFile=reports/ci-results.json",
-    "test:performance": "vitest run --config config/vitest.performance.config.ts",
-    "test:perf:benchmark": "vitest run --config config/vitest.performance.config.ts --reporter=verbose",
-    "cleanup": "tsx scripts/cleanup.ts",
-    "cleanup:dry": "tsx scripts/cleanup.ts --dry-run --verbose",
-    "cleanup:cache": "find . -name '.unjucks-cache' -type d -exec rm -rf {} + 2>/dev/null || true",
-    "cleanup:test": "rm -rf test-* debug-cli.js 2>/dev/null || true",
-    "test:perf:ci": "vitest run --config config/vitest.performance.config.ts --reporter=json --outputFile=reports/perf-ci-results.json",
-    "test:perf:startup": "vitest run tests/performance/cli-startup.performance.test.ts --config config/vitest.performance.config.ts",
-    "test:perf:generation": "vitest run tests/performance/template-generation.performance.test.ts --config config/vitest.performance.config.ts",
-    "test:perf:load": "vitest run tests/performance/load-testing.performance.test.ts --config config/vitest.performance.config.ts",
-    "test:perf:edge": "vitest run tests/performance/edge-cases.performance.test.ts --config config/vitest.performance.config.ts",
-    "test:perf:validation": "vitest run tests/performance/ci-validation.performance.test.ts --config config/vitest.performance.config.ts",
-    "test:perf:regression": "vitest run tests/performance/regression-tracking.performance.test.ts --config config/vitest.performance.config.ts",
-    "benchmark": "tsx scripts/performance-benchmark.ts",
-    "benchmark:ci": "tsx scripts/ci-performance-check.ts",
-    "test:security": "vitest run --config config/vitest.cucumber.config.ts --testNamePattern=\".*security.*\"",
-    "test:cucumber:dry": "vitest run --config config/vitest.cucumber.config.ts --reporter=verbose --bail=1",
-    "test:cucumber:parallel": "vitest run --config config/vitest.cucumber.config.ts --pool=threads --poolOptions.threads.maxThreads=4",
-    "test:cucumber:debug": "DEBUG=true vitest run --config config/vitest.cucumber.config.ts --reporter=verbose",
-    "test:cucumber:legacy": "echo 'Legacy cucumber removed. Use npm run test:bdd instead'",
-    "test:cucumber:watch": "echo 'Legacy cucumber removed. Use npm run test:bdd:watch instead'",
-    "reports": "tsx scripts/generate-reports.ts",
-    "reports:security": "tsx scripts/generate-reports.ts --security-only",
-    "reports:performance": "tsx scripts/generate-reports.ts --performance-only",
-    "reports:coverage": "tsx scripts/generate-reports.ts --coverage-only",
-    "reports:cleanup": "tsx scripts/generate-reports.ts --cleanup",
-    "reports:ci": "tsx scripts/generate-reports.ts --format json --cleanup"
+    "test:types": "tsc --noEmit --skipLibCheck",
+    "typecheck": "tsc --noEmit --skipLibCheck",
+    "test:bdd": "vitest run --config vitest.cucumber.config.ts",
+    "test:performance": "vitest run tests/performance/ --reporter=verbose",
+    "test:integration": "vitest run tests/integration/ --reporter=verbose",
+    "test:security": "vitest run tests/security/ --reporter=verbose",
+    "dev:frontend": "nuxt dev src",
+    "build:frontend": "nuxt build src",
+    "preview:frontend": "nuxt preview src",
+    "server:dev": "tsx watch src/server/index.ts",
+    "server:start": "node dist/server/index.js",
+    "build:server": "tsc -p tsconfig.server.json"
+  },
+  "peerDependencies": {
+    "@nuxt/ui": "^2.18.7",
+    "nuxt": "^3.13.2"
   },
   "dependencies": {
-    "chalk": "^5.3.0",
     "citty": "^0.1.6",
-    "confbox": "^0.2.2",
-    "fs-extra": "^11.2.0",
-    "inquirer": "^9.2.15",
-    "n3": "^1.26.0",
+    "c12": "^1.11.1",
+    "consola": "^3.2.3",
+    "defu": "^6.1.4",
+    "jiti": "^1.21.6",
+    "magicast": "^0.3.5",
+    "mlly": "^1.7.1",
     "nunjucks": "^3.2.4",
-    "ora": "^8.0.1",
-    "yaml": "^2.4.1",
-    "express": "^4.18.2",
-    "apollo-server-express": "^3.12.1",
-    "graphql": "^16.8.1",
-    "dataloader": "^2.2.2",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "passport-jwt": "^4.0.1",
-    "passport-saml": "^3.4.1",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-github2": "^0.1.12",
-    "passport-microsoft": "^1.0.0",
-    "passport-ldapauth": "^3.0.1",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "express-session": "^1.17.3",
-    "connect-redis": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "rate-limit-redis": "^4.2.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "pg": "^8.11.3",
-    "redis": "^4.6.10",
-    "ws": "^8.14.2",
-    "amqplib": "^0.10.3",
-    "kafkajs": "^2.2.4",
-    "zod": "^3.22.4"
+    "ofetch": "^1.4.0",
+    "ohash": "^1.1.3",
+    "pathe": "^1.1.2",
+    "scule": "^1.3.0",
+    "ufo": "^1.5.4",
+    "unimport": "^3.13.1"
   },
   "devDependencies": {
-    "@amiceli/vitest-cucumber": "^5.2.1",
-    "@cucumber/cucumber": "^12.2.0",
-    "@types/fs-extra": "^11.0.4",
-    "@types/inquirer": "^9.0.7",
-    "@types/jest": "^29.5.0",
-    "@types/n3": "^1.26.0",
-    "@types/node": "^24.3.0",
-    "@types/nunjucks": "^3.2.3",
-    "@types/express": "^4.17.21",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
-    "@types/passport-jwt": "^3.0.13",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/express-session": "^1.17.10",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/pg": "^8.10.9",
-    "@types/ws": "^8.5.10",
-    "@types/amqplib": "^0.10.4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "automd": "^0.4.0",
-    "changelogen": "^0.6.2",
-    "chokidar": "^4.0.3",
-    "eslint": "^9.33.0",
-    "eslint-config-unjs": "^0.5.0",
-    "fast-check": "^3.23.2",
-    "glob": "^10.0.0",
-    "hygen": "^6.2.11",
-    "jest": "^29.7.0",
-    "obuild": "^0.2.1",
-    "prettier": "^3.6.2",
-    "ts-node": "^10.9.0",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "@vitejs/plugin-vue": "^5.2.1",
+    "vite": "^6.0.7",
+    "@antfu/eslint-config": "^3.7.3",
+    "@nuxt/eslint": "^0.5.7",
+    "@nuxt/ui": "^2.18.7",
+    "@pinia/nuxt": "^0.5.5",
+    "@types/node": "^22.7.4",
+    "@types/nunjucks": "^3.2.6",
+    "@vitest/ui": "^2.1.2",
+    "@vueuse/nuxt": "^11.1.0",
+    "automd": "^0.3.8",
+    "changelogen": "^0.5.7",
+    "eslint": "^9.12.0",
+    "jszip": "^3.10.1",
+    "nuxt": "^3.13.2",
+    "nuxt-security": "^2.0.0",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "^5.6.2",
+    "unbuild": "^2.0.0",
+    "vitest": "^2.1.2",
+    "vitest-cucumber": "^8.0.1"
   },
-  "packageManager": "pnpm@10.15.0"
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint:fix"
+  }
 }
