--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unjucks",
+  "name": "@seanchatmangpt/unjucks",
   "version": "1.0.0",
   "type": "module",
   "description": "Nunjucks + Hygen style scaffolding with RDF/Turtle support",
@@ -17,7 +17,7 @@
     }
   },
   "files": [
-    "dist/src",
+    "dist",
     "bin",
     "README.md",
     "LICENSE"
@@ -35,6 +35,21 @@
     "test:validation": "vitest run tests/validation/",
     "test:security": "vitest run tests/security/",
     "test:performance": "vitest run tests/benchmarks/",
+    "test:cli": "vitest run --config vitest.cli.config.ts",
+    "test:cli:watch": "vitest watch --config vitest.cli.config.ts",
+    "test:cli:core": "vitest run --config vitest.cli.config.ts tests/cli/core-cli.test.ts",
+    "test:cli:compatibility": "vitest run --config vitest.cli.config.ts tests/cli/backward-compatibility.test.ts",
+    "test:cli:errors": "vitest run --config vitest.cli.config.ts tests/cli/error-handling.test.ts",
+    "test:cli:help": "vitest run --config vitest.cli.config.ts tests/cli/help-system.test.ts",
+    "test:cli:semantic": "vitest run --config vitest.cli.config.ts tests/cli/semantic-commands.test.ts",
+    "test:cli:args": "vitest run --config vitest.cli.config.ts tests/cli/argument-parsing.test.ts",
+    "test:cli:files": "vitest run --config vitest.cli.config.ts tests/cli/file-operations.test.ts",
+    "test:cli:combinations": "vitest run --config vitest.cli.config.ts tests/cli/command-combinations.test.ts",
+    "test:cli:performance": "vitest run --config vitest.cli.config.ts tests/cli/performance-edge-cases.test.ts",
+    "test:cli:workflows": "vitest run --config vitest.cli.config.ts tests/cli/full-workflows.test.ts",
+    "test:deployment": "vitest run --config config/vitest.deployment.config.ts",
+    "test:deployment:watch": "vitest watch --config config/vitest.deployment.config.ts",
+    "test:deployment:ui": "vitest --ui --config config/vitest.deployment.config.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit",
@@ -68,16 +83,25 @@
   "homepage": "https://unjucks.dev",
   "dependencies": {
     "axios": "^1.6.0",
+    "chalk": "^4.1.2",
     "chokidar": "^4.0.3",
     "citty": "^0.1.6",
+    "cli-table3": "^0.6.5",
+    "consola": "^3.4.2",
+    "fs-extra": "^11.3.1",
     "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
+    "inquirer": "^12.9.4",
     "n3": "^1.26.0",
     "nunjucks": "^3.2.4",
+    "ora": "^8.2.0",
     "yaml": "^2.4.1"
   },
   "devDependencies": {
     "@amiceli/vitest-cucumber": "^5.2.1",
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.9",
+    "@types/n3": "^1.26.0",
     "@types/node": "^20.0.0",
     "@types/nunjucks": "^3.2.6",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
