--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seanchatmangpt/unjucks",
-  "version": "2025.09.07.16.05",
+  "version": "2025.09.07.19.54",
   "type": "module",
   "description": "Nunjucks + Hygen style scaffolding with RDF/Turtle support",
   "main": "./src/cli/index.js",
@@ -19,7 +19,18 @@
     "README.md",
     "LICENSE"
   ],
+  "packageManager": "pnpm@9.12.0",
   "scripts": {
+    "pnpm:install": "pnpm install --frozen-lockfile",
+    "pnpm:update": "pnpm update --latest",
+    "pnpm:audit": "pnpm audit --audit-level moderate",
+    "pnpm:dedupe": "pnpm dedupe",
+    "pnpm:prune": "pnpm prune",
+    "pnpm:rebuild": "pnpm rebuild",
+    "pnpm:why": "pnpm why",
+    "workspace:list": "pnpm list --recursive --depth=-1",
+    "workspace:outdated": "pnpm outdated --recursive",
+    "workspace:run": "pnpm run --recursive",
     "docs:update": "automd",
     "docs:check": "automd --check",
     "test:production": "node scripts/production-test-runner.js",
@@ -128,6 +139,7 @@
   },
   "homepage": "https://unjucks.dev",
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "chalk": "^4.1.2",
@@ -137,7 +149,6 @@
     "confbox": "^0.2.2",
     "consola": "^3.4.2",
     "dayjs": "^1.11.18",
-    "@faker-js/faker": "^9.9.0",
     "fs-extra": "^11.3.1",
     "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
