--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,6 +170,51 @@ jobs:
               environment_url: `https://www.npmjs.com/package/@seanchatmangpt/unjucks`
             });
 
+  cleanroom-test:
+    name: Cleanroom Testing
+    runs-on: ubuntu-latest
+    needs: [build-and-test]
+    strategy:
+      matrix:
+        test-mode: [minimal, standard]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Install Verdaccio
+        run: npm install -g verdaccio
+        
+      - name: Make scripts executable
+        run: |
+          chmod +x scripts/cleanroom-test.sh
+          chmod +x scripts/automated-cleanroom.sh
+          chmod +x scripts/validation-checklist.js
+        
+      - name: Run cleanroom tests
+        run: |
+          KEEP_ARTIFACTS=true scripts/automated-cleanroom.sh ${{ matrix.test-mode }}
+        continue-on-error: false
+        timeout-minutes: 20
+        
+      - name: Upload cleanroom results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cleanroom-results-${{ matrix.test-mode }}
+          path: |
+            reports/cleanroom-*/
+            temp/cleanroom-logs-*/
+          retention-days: 7
+
   performance-test:
     name: Performance Testing
     runs-on: ubuntu-latest
@@ -187,15 +232,26 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Install Verdaccio
+        run: npm install -g verdaccio
+        
+      - name: Make scripts executable
+        run: |
+          chmod +x scripts/automated-cleanroom.sh
+        
       - name: Run performance benchmarks
-        run: npm run test:performance
+        run: |
+          KEEP_ARTIFACTS=true scripts/automated-cleanroom.sh performance
         continue-on-error: true
+        timeout-minutes: 25
         
       - name: Upload performance results
         uses: actions/upload-artifact@v4
         with:
           name: performance-results
-          path: performance-results.json
+          path: |
+            reports/cleanroom-*/performance-benchmarks.json
+            reports/cleanroom-*/index.html
           retention-days: 30
 
   integration-test:
