--- a/package.json
+++ b/package.json
@@ -142,10 +142,15 @@
     "puppeteer-core": "^24.19.0"
   },
   "devDependencies": {
+    "@amiceli/vitest-cucumber": "^5.2.1",
+    "@cucumber/cucumber": "^12.2.0",
     "@rollup/rollup-darwin-arm64": "^4.50.1",
+    "@testing-library/jest-dom": "^6.8.0",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
     "@typescript-eslint/parser": "^8.42.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^8.57.0",
+    "fast-check": "^4.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.8",
     "prettier": "^3.6.2",
