--- a/package.json
+++ b/package.json
@@ -25,18 +25,38 @@
   ],
   "scripts": {
     "build": "chmod +x bin/unjucks.cjs && chmod +x src/cli/index.js && node scripts/build-system.js",
+    "build:enhanced": "node scripts/enhanced-build-system.js",
+    "build:watch": "node scripts/enhanced-build-system.js --watch",
     "build:validate": "node scripts/build-system.js",
     "build:prepare": "chmod +x bin/unjucks.cjs && chmod +x src/cli/index.js",
-    "test": "echo 'Tests temporarily disabled due to dependency conflicts'",
+    "dev": "node --watch src/cli/index.js",
+    "dev:server": "node -e \"import('./src/lib/build/dev-server.js').then(m => new m.DevelopmentServer().start())\"",
+    "test": "node tests/native-test-runner.js",
+    "test:vitest": "vitest run --no-coverage",
+    "test:watch": "vitest --no-coverage",
     "test:smoke": "node bin/unjucks.cjs --version && node bin/unjucks.cjs --help",
     "test:cli": "node bin/unjucks.cjs list && echo 'CLI tests completed'",
-    "test:integration": "echo 'Integration tests - checking CLI functionality' && npm run test:cli",
+    "test:integration": "node tests/mcp-integration-basic.js",
+    "test:mcp": "node tests/mcp-integration-basic.js",
     "test:cli:semantic": "echo 'Semantic CLI tests completed'",
-    "lint": "echo 'Linting temporarily disabled due to dependency conflicts'",
+    "test:coverage": "npx c8 --reporter=json --reporter=text --reporter=html npm test",
+    "test:e2e": "node tests/qa/e2e-user-journeys.js",
+    "test:performance": "node tests/qa/performance-regression.js",
+    "test:mutation": "node tests/qa/mutation-testing.js",
+    "test:workflows": "node tests/qa/workflow-validator.js",
+    "qa:quality-gates": "node tests/qa/quality-gates.js",
+    "qa:coverage": "node tests/qa/coverage-monitor.js",
+    "qa:security": "node tests/qa/security-scanner.js",
+    "qa:dashboard": "node tests/qa/quality-dashboard.js",
+    "qa:monitor": "node tests/qa/continuous-monitoring.js",
+    "qa:suite": "node tests/qa/qa-suite.js",
+    "qa:suite:fast": "node tests/qa/qa-suite.js --skip-long-running",
+    "qa:all": "npm run qa:suite",
+    "lint": "echo 'No linting configured for JavaScript project'",
     "security:scan": "npm audit --audit-level moderate || echo 'Security scan completed'",
     "clean": "rm -rf node_modules package-lock.json && npm install",
     "clean:build": "rm -rf dist/ build/ .output/",
-    "dev": "node --watch src/cli/index.js",
+    "clean:qa": "rm -rf tests/reports/*.json tests/reports/*.html tests/reports/*.txt",
     "typecheck": "echo 'No TypeScript type checking - using JavaScript'",
     "act:install": "echo 'Please install act manually: https://github.com/nektos/act#installation'",
     "act:test": "./scripts/test-workflows.sh quick",
@@ -70,6 +90,7 @@
   "homepage": "https://unjucks.dev",
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@rollup/rollup-darwin-arm64": "^4.50.1",
     "chalk": "^4.1.2",
     "chokidar": "^3.6.0",
     "citty": "^0.1.6",
@@ -106,5 +127,18 @@
     "puppeteer": {
       "optional": true
     }
+  },
+  "devDependencies": {
+    "@cucumber/cucumber": "^11.0.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "c8": "^10.1.3",
+    "tsx": "^4.7.3",
+    "vitest": "^2.1.8",
+    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "prettier": "^3.2.5",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2"
   }
 }
