--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install pnpm
@@ -54,7 +54,7 @@ jobs:
           version: '9.12.0'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci --prefer-offline --no-audit --omit=optional || npm install --omit=optional
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
@@ -94,7 +94,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install pnpm
@@ -103,7 +103,7 @@ jobs:
           version: '9.12.0'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci --prefer-offline --no-audit --omit=optional || npm install --omit=optional
 
       - name: Run npm audit
         run: |
@@ -230,7 +230,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install pnpm
@@ -239,7 +239,7 @@ jobs:
           version: '9.12.0'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci --prefer-offline --no-audit --omit=optional || npm install --omit=optional
 
       - name: License check
         run: |
@@ -286,7 +286,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install pnpm
